<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_pager"
        app:layout_constraintTop_toBottomOf="parent">

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:background="@android:color/transparent"
            android:text="@string/btn_skip"
            android:textColor="@color/color_white"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/btn_back"
            android:textColor="@color/color_white"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linear_circles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/btn_next"
            android:textColor="@color/color_white"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:text="@string/btn_done"
            android:textColor="@color/color_white"
            android:visibility="gone"
            android:textSize="16sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>